# fiap-hackaton-fase05

./: .env.example  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  train_model.ipynb  use zip dataset   usezipdataset
config/: __init__.py  settings.py
data/diagram/: imagem01.json  imagem02.json
dataset/: README.dataset.txt  README.roboflow.txt  data.yaml
dataset/test/labels/: 113_png_jpg.rf.e8560504557e0e7caab7d8be1feaa396.txt  119_png_jpg.rf.4427d2403f659432c91b5a55526d99aa.txt  150_png_jpg.rf.d7ff8696ee459e2e53cc781c24b4c4ee.txt  19_png_jpg.rf.bbd75975c19dc96f012a2950141f4454.txt  1_WHM-ERga9WzAccEfFYpcSg_png_jpg.rf.9748d1e378ac76f69f3ecc546a5264df.txt  1_png_jpg.rf.9cd80eceb92a56bfd4c079eb0777f5ab.txt  24_png_jpg.rf.348d83f76c1d9bbad42a05f1fcb83bdb.txt  30_png_jpg.rf.a9b37dea00d3ad61ee199b8362b0174e.txt  35_png_jpg.rf.4301852b2eda5a3f801feb8c94547731.txt  37px-Featured_article-1-_png_jpg.rf.c455dfed0cd2f223ae0022c5e78dba1e.txt  37px-Featured_article-1-_png_jpg.rf.d414d0496631447e28f0f8982165432b.txt  (+188 more)
dataset/train/: labels.cache
dataset/valid/: labels.cache
notebooks/: train_colab.ipynb
script/: prepare_dataset.py
sql/: init_db.sql
src/: __init__.py  analyze_dataset.py  app.py  database.py  init_db.sql  stride_engine.py  train_colab.ipynb  train_model.py  train_model_output.txt
src/detection/: __init__.py  detector.py
src/stride/: __init__.py  categories.py  engine.py  knowledge_base.py
src/training/: trainer.py
tests/: conftest.py  test_detector.py  test_knowledge_base.py  test_stride_engine.py
(+4232 files in other folders)
